Fix #10447 - Prevent navigation from jumping vertically when clicking into token (#10471)

--- a/ui/app/pages/asset/asset.scss
+++ b/ui/app/pages/asset/asset.scss
@@ -13,7 +13,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 16px;
-  height: 54px;
+  height: 64px;
 }
 
 .asset-breadcrumb {
